# lightspeed

./: .gitignore  AUTHORS  ChangeLog  INSTALL  MATH  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  configure.in  lightspeed.spec
objects/: README  cube.3ds  hoverunit.3ds  voyager.lwo
po/: lightspeed.pot
src/: Makefile.am  Makefile.in  acconfig.h  animation.c  auxobjects.c  camera.c  command.c  compat.h  geometry.c  globals.c  gtkwidgets.c  icon.c  icon.xpm  importobjs.c  infodisp.c  lattice.c  lightspeed.c  lightspeed.h  lstrings.c  lstrings.h  mainwindow.c  menu_cbs.c  misc.c  ogl.c  read3ds.c  read3ds.h  readlwo.c  readlwo.h  settings.h  snapshot.c  title.xpm  trackmem.c  trackmem.h  warp.c
