## src/Makefile.am

bin_PROGRAMS = lightspeed

lightspeed_SOURCES = \
        acconfig.h \
        compat.h \
        lightspeed.h \
        lstrings.h \
        read3ds.h \
        readlwo.h \
        settings.h \
        trackmem.h \
        animation.c \
        auxobjects.c \
        camera.c \
        command.c \
        geometry.c \
        globals.c \
        gtkwidgets.c \
	  icon.c \
        importobjs.c \
        infodisp.c \
        lattice.c \
        lightspeed.c \
        lstrings.c \
        mainwindow.c \
        menu_cbs.c \
        misc.c \
        ogl.c \
        read3ds.c \
        readlwo.c \
        trackmem.c \
        warp.c

EXTRA_DIST = \
	title.xpm

## end src/Makefile.am
